# new_vat_reports_generator

./: .env.example  .gitignore  PROJECT_PHILOSOPHY.md  README.md  app.py  config.py  logging_config.py  main.py  plan.md  pyproject.toml
Examples_Reports/:  Q1 VAT Raw Report 2026 _ BC BE.csv  January 2026 - VAT Accounting Report - Belchicken A12 Drive.xlsx  Q1 - March 2026 - VAT Accounting Report - Belchicken A12 Drive.xlsx
data/: 2026-04-08_stores_mapping.json  csv_import.py  last_run.json  last_run_manager.py  store_cache.py  store_mapping.json  stores_cache.json  sync_reports_GDrive.py
db/: SQL_Query.sql  query.py
docs/superpowers/plans/: 2026-04-09-ui-feedback-fix.md  2026-04-10-pyodbc-to-mssql-python-migration.md
drive/: auth.py  delete.py  mapping.py  upload.py
fixtures/: sample_last_run.json  sample_query_result.json  sample_store_mapping.json
reports/: excel.py  split.py  summary.py
scripts/: run.bat  run.sh  setup.bat  setup.sh
tests/: conftest.py  test_app_workflow.py  test_csv_import.py  test_db_query.py  test_drive_auth.py  test_drive_connection.py  test_drive_delete.py  test_drive_mapping.py  test_drive_upload.py  test_integration.py  test_last_run.py  test_logging_config.py  test_report_excel.py  test_report_split.py  test_report_summary.py  test_store_cache.py  test_validation.py
tests/db_auth/: _helpers.py  conftest.py  test_active_directory_default.py  test_active_directory_interactive.py  test_network.py  test_service_principal.py  test_sql_auth.py  test_vat_query_live.py
(+2 files in other folders)
